# starter-app

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  mise.toml
backend/: Dockerfile  pyproject.toml
backend/backend/: main.py  worker.py
backend/tests/: conftest.py  test_worker.py
db/: schema.sql
db/migrations/: 20260605000001_extensions.sql
frontend/: index.html
postgres/: Dockerfile
